Bug 1819610 - Badges cut off in icon besides text and icons only unified toolbar layout. r=freaktechnik
Differential Revision: https://phabricator.services.mozilla.com/D180249

--HG--
extra : moz-landing-system : lando

--- a/mail/components/unifiedtoolbar/content/unifiedToolbarWebextensions.css
+++ b/mail/components/unifiedtoolbar/content/unifiedToolbarWebextensions.css
@@ -7,6 +7,7 @@
 .unified-toolbar .extension-action .button-icon {
   height: 16px;
   width: 16px;
+  margin-inline: 1px;
   content: var(--webextension-toolbar-image, inherit);
 }
 
